layer.conf: Add digi mirror URL placeholder.
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -20,7 +20,7 @@ DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 # [DIGI] This is Digi's Open Source license agreement.
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
-DIGI_MIRROR ?= "http://www.freescale.com/lgfiles/NMG/MAD/YOCTO/"
+DIGI_MIRROR ?= "http://www.digi.com/yocto/"
 
 # [DIGI] PREMIRRORS and tried first and if not found, all MIRRORS next.
 MIRRORS += "${DIGI_MIRROR} \n"
