layer.conf: Bump the layer priority.
Make meta-digi the same priority as meta and meta-yocto so that recipes
with new revisions are used from meta-digi.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -7,9 +7,9 @@ BBFILES := "${BBFILES} ${LAYERDIR}/recipes-*/*/*.bb \
 # [DIGI] but with custom modifications.
 # [DIGI] Not currently used but left here for reference.
 
-# BBFILE_COLLECTIONS += "digi"
-# BBFILE_PATTERN_digi := "^${LAYERDIR}/"
-# BBFILE_PRIORITY_digi = "5"
+BBFILE_COLLECTIONS += "del"
+BBFILE_PATTERN_del := "^${LAYERDIR}/"
+BBFILE_PRIORITY_del = "5"
 
 # [DIGI] This is the FSL license agreement.
 FSL_MMK_EULA_FILE = "${LAYERDIR}/FSL_MMK_EULA"
