del: Shorten distro name to remove reference to Poky.
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/distro/del.conf
+++ b/meta-digi-arm/conf/distro/del.conf
@@ -1,5 +1,5 @@
 DISTRO = "del"
-DISTRO_NAME = "Digi Embedded Linux (Built by Poky 7.0.1)"
+DISTRO_NAME = "Digi Embedded Linux"
 DISTRO_VERSION = "6.0"
 SDK_VENDOR = "-del"
 SDK_VERSION := "${DISTRO_VERSION}" 
