--- a/meta-digi-del/conf/layer.conf
+++ b/meta-digi-del/conf/layer.conf
@@ -3,8 +3,9 @@ BBPATH := "${BBPATH}:${LAYERDIR}"
 BBFILES := "${BBFILES} ${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-# [DIGI] This is the FSL license agreement.
-FSL_MMK_EULA_FILE = "${LAYERDIR}/FSL_MMK_EULA"
+BBFILE_COLLECTIONS += "del"
+BBFILE_PATTERN_del := "^${LAYERDIR}/"
+BBFILE_PRIORITY_del = "5"
 
 # [DIGI] This is Digi's General license agreement.
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
