--- a/meta-digi-del/conf/layer.conf
+++ b/meta-digi-del/conf/layer.conf
@@ -14,6 +14,7 @@ DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
 DIGI_MIRROR ?= "http://www.digi.com/yocto/"
+DIGI_LOG_MIRROR += "http://build-linux.digi.com/LxNETES-4/pooldir/"
 
 # [DIGI] PREMIRRORS and tried first and if not found, all MIRRORS next.
-MIRRORS += "${DIGI_MIRROR} \n"
+MIRRORS += "${DIGI_MIRROR} ${DIGI_LOG_MIRROR} \n"
