meta-fsl-del: Add gstreamer packages to del-gstreamer task.
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -43,6 +43,9 @@ TCLIBCAPPEND = ""
 QEMU_TARGETS ?= "arm i386 mips mipsel ppc x86_64"
 # Other QEMU_TARGETS "mips64 mips64el sh4"
 
+# Some packages like gst-plugins-ugly need this
+LICENSE_FLAGS_WHITELIST += "commercial"
+
 PREMIRRORS ?= "\
 bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
