meta-digi-del: Configure del distro features.
Instead of using the default distro features configure them for the
del distro.

The default features include some which we don't need, as 3g and x11
amongst others.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -10,7 +10,15 @@ TARGET_VENDOR = "-del"
 
 LOCALCONF_VERSION = "1"
 
-DISTRO_FEATURES_append = " largefile opengl"
+# Comment out features to leave them out
+DISTRO_FEATURE = "alsa"
+DISTRO_FEATURE += "ext2"
+DISTRO_FEATURE += "usbgadget"
+DISTRO_FEATURE += "usbhst"
+DISTRO_FEATURE += "nfs"
+DISTRO_FEATURE += "${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURE += "largefile"
+DISTRO_FEATURE += "opengl"
 
 PREFERRED_VERSION_linux-yocto ?= "3.0%"
 PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.2%"
