meta-digi-del: Correct typo in del.conf
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -11,14 +11,14 @@ TARGET_VENDOR = "-del"
 LOCALCONF_VERSION = "1"
 
 # Comment out features to leave them out
-DISTRO_FEATURE = "alsa"
-DISTRO_FEATURE += "ext2"
-DISTRO_FEATURE += "usbgadget"
-DISTRO_FEATURE += "usbhst"
-DISTRO_FEATURE += "nfs"
-DISTRO_FEATURE += "${DISTRO_FEATURES_LIBC}"
-DISTRO_FEATURE += "largefile"
-DISTRO_FEATURE += "opengl"
+DISTRO_FEATURES = "alsa"
+DISTRO_FEATURES += "ext2"
+DISTRO_FEATURES += "usbgadget"
+DISTRO_FEATURES += "usbhst"
+DISTRO_FEATURES += "nfs"
+DISTRO_FEATURES += "${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES += "largefile"
+DISTRO_FEATURES += "opengl"
 
 PREFERRED_VERSION_linux-yocto ?= "3.0%"
 PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.2%"
