meta-digi-arm: Reuse meta-fsl-arm for machine configuration.
- imx-digi-base includes imx-base and contains the overrides.
- mxs-digi-base includes mxs-base and contains the overrides.
- digi-defaults contains the overrides to fsl-default-settings,
  fsl-default-providers and fsl-default-versions.
- The machine configuration files include the digi includes and also
  contains the UBOOT load addresses overrides.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccxmx51js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx51js.conf
@@ -2,10 +2,10 @@
 #@NAME: ConnectCore for MX51 JumpStart Kit.
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore for MX51 JSK
 
-include conf/machine/include/imx-base.inc
+include conf/machine/include/imx-digi-base.inc
 include conf/machine/include/tune-cortexa8.inc
 
-SOC_FAMILY = "mx51:mx5"
+SOC_FAMILY = "mx5"
 
 # [DIGI] Dig's kernel does not use device trees.
 # KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/ccxmx51js.dts"
@@ -15,3 +15,6 @@ UBOOT_MACHINE = "ccxmx51_config"
 # [DIGI] Wireless firmware file need to be addded here
 # MACHINE_FIRMWARE += " firmware-imx-ath6k"
 MACHINE_FEATURES += " wifi"
+
+UBOOT_ENTRYPOINT_mx51  = "0x94000000"
+UBOOT_LOADADDRESS_mx51 = "0x94000000"
