--- a/meta-digi-arm/conf/machine/ccxmx53js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx53js.conf
@@ -2,10 +2,10 @@
 #@NAME: ConnectCore for MX53 JumpStart Kit.
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore for MX53 JSK.
 
-include conf/machine/include/imx-base.inc
+include conf/machine/include/imx-digi-base.inc
 include conf/machine/include/tune-cortexa8.inc
 
-SOC_FAMILY = "mx53:mx5"
+SOC_FAMILY = "mx5"
 
 # [DIGI] Digi's kernel does not use device tree.
 # KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/imx53-qsb.dts"
@@ -15,3 +15,6 @@ UBOOT_MACHINE = "ccxmx53js_config"
 # [DIGI] Wireless firmware file need to be addded here
 # MACHINE_FIRMWARE += " firmware-imx-ath6k"
 MACHINE_FEATURES += " wifi"
+
+UBOOT_ENTRYPOINT_mx53  = "0x70800000"
+UBOOT_LOADADDRESS_mx53 = "0x70800000"
