meta-digi: Remove [DIGI] from comments.
Now that all code is our own as we are not copying recipes into the
layer but overriden the ones in meta-fsl-arm, the prefix to comments
have no use.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccardxmx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardxmx28js.conf
@@ -14,7 +14,7 @@ UBOOT_SUFFIX = "sb"
 
 KERNEL_IMAGETYPE = "uImage"
 
-# [DIGI] Digi's kernel does not use device tree.
+# Digi's kernel does not use device tree.
 # KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/ccardxmx28js.dts"
 
 SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext3"
