--- a/meta-digi-arm/conf/machine/ccxmx51js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx51js.conf
@@ -7,12 +7,12 @@ include conf/machine/include/tune-cortexa8.inc
 
 SOC_FAMILY = "mx5"
 
-# [DIGI] Dig's kernel does not use device trees.
+# Digi's kernel does not use device trees.
 # KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/ccxmx51js.dts"
 
 UBOOT_MACHINE = "ccxmx51_config"
 
-# [DIGI] Wireless firmware file need to be addded here
+# Wireless firmware file need to be addded here
 # MACHINE_FIRMWARE += " firmware-imx-ath6k"
 MACHINE_FEATURES += " wifi"
 
