--- a/meta-digi-del/conf/layer.conf
+++ b/meta-digi-del/conf/layer.conf
@@ -7,14 +7,14 @@ BBFILE_COLLECTIONS += "del"
 BBFILE_PATTERN_del := "^${LAYERDIR}/"
 BBFILE_PRIORITY_del = "5"
 
-# [DIGI] This is Digi's General license agreement.
+# This is Digi's General license agreement.
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 
-# [DIGI] This is Digi's Open Source license agreement.
+# This is Digi's Open Source license agreement.
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
 DIGI_MIRROR ?= "http://www.digi.com/yocto/"
 DIGI_LOG_MIRROR += "http://build-linux.digi.com/LxNETES-4/pooldir/"
 
-# [DIGI] PREMIRRORS and tried first and if not found, all MIRRORS next.
+# PREMIRRORS and tried first and if not found, all MIRRORS next.
 MIRRORS += "${DIGI_MIRROR} ${DIGI_LOG_MIRROR} \n"
