--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -3,16 +3,16 @@ BBPATH := "${BBPATH}:${LAYERDIR}"
 BBFILES := "${BBFILES} ${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-# [DIGI] This is the FSL license agreement.
+# This is the FSL license agreement.
 FSL_MMK_EULA_FILE = "${LAYERDIR}/FSL_MMK_EULA"
 
-# [DIGI] This is Digi's General license agreement.
+# This is Digi's General license agreement.
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 
-# [DIGI] This is Digi's Open Source license agreement.
+# This is Digi's Open Source license agreement.
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
 DIGI_MIRROR ?= "http://www.digi.com/yocto/"
 
-# [DIGI] PREMIRRORS and tried first and if not found, all MIRRORS next.
+# PREMIRRORS and tried first and if not found, all MIRRORS next.
 MIRRORS += "${DIGI_MIRROR} \n"
