--- a/meta-digi-arm/conf/machine/ccxmx53js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx53js.conf
@@ -7,12 +7,12 @@ include conf/machine/include/tune-cortexa8.inc
 
 SOC_FAMILY = "mx5"
 
-# [DIGI] Digi's kernel does not use device tree.
+# Digi's kernel does not use device tree.
 # KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/imx53-qsb.dts"
 
 UBOOT_MACHINE = "ccxmx53js_config"
 
-# [DIGI] Wireless firmware file need to be addded here
+# Wireless firmware file need to be addded here
 # MACHINE_FIRMWARE += " firmware-imx-ath6k"
 MACHINE_FEATURES += " wifi"
 
