meta-digi-arm: Accept the FSL EULA agreement.
Doing it in the layer configuration means we don't have to do it in
each recipe that requires it.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -16,3 +16,6 @@ DIGI_MIRROR ?= "http://www.digi.com/yocto/"
 
 # PREMIRRORS and tried first and if not found, all MIRRORS next.
 MIRRORS += "${DIGI_MIRROR} \n"
+
+# Accept FSL licenses
+ACCEPT_FSL_EULA = "1"
