meta-digi-del: Add jpeg preferred provider.
This avoids getting a warning in the build.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -20,6 +20,8 @@ DISTRO_FEATURES += "${DISTRO_FEATURES_LIBC}"
 DISTRO_FEATURES += "largefile"
 DISTRO_FEATURES += "opengl"
 
+PREFERRED_PROVIDER_jpeg = "jpeg"
+
 PREFERRED_VERSION_linux-yocto ?= "3.0%"
 PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.2%"
 PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.2%"
