meta-digi: Move mirrors to meta-digi-arm.
Nothing in meta-digi-del needs them at the moment.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -13,9 +13,10 @@ DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
 DIGI_MIRROR ?= "http://www.digi.com/yocto/"
+DIGI_LOG_MIRROR += "http://build-linux.digi.com/LxNETES-4/pooldir/"
 
 # PREMIRRORS and tried first and if not found, all MIRRORS next.
-MIRRORS += "${DIGI_MIRROR} \n"
+MIRRORS += "${DIGI_MIRROR} ${DIGI_LOG_MIRROR} \n"
 
 # Accept FSL licenses
 ACCEPT_FSL_EULA = "1"
