meta-digi-arm: Add new variable DIGI_LOG_GIT.
And use it in all files that need it.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -14,6 +14,7 @@ DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
 DIGI_MIRROR ?= "http://www.digi.com/yocto/"
 DIGI_LOG_MIRROR += "http://build-linux.digi.com/LxNETES-4/pooldir/"
+DIGI_LOG_GIT = "git://log-sln-git.digi.com/"
 
 # PREMIRRORS and tried first and if not found, all MIRRORS next.
 MIRRORS += "${DIGI_MIRROR} ${DIGI_LOG_MIRROR} \n"
