meta-digi: Add the redpine wireless driver.
This included the recipe where the driver is cloned from git and compiled
from source.

The recipe also copies the firmware files and the if-pre-up scrip.

Pending is the recipe to link from precompiled objects in a .tar.gz file.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccxmx53js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx53js.conf
@@ -18,3 +18,5 @@ MACHINE_FEATURES += " wifi"
 
 UBOOT_ENTRYPOINT_mx53  = "0x70800000"
 UBOOT_LOADADDRESS_mx53 = "0x70800000"
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-redpine"
