--- a/meta-digi-arm/conf/machine/ccxmx51js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx51js.conf
@@ -18,3 +18,5 @@ MACHINE_FEATURES += " wifi"
 
 UBOOT_ENTRYPOINT_mx51  = "0x94000000"
 UBOOT_LOADADDRESS_mx51 = "0x94000000"
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-redpine"
