--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -28,6 +28,7 @@ PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.2%"
 PREFERRED_VERSION_linux-yocto_qemuarm ?= "3.2%"
 PREFERRED_VERSION_linux-yocto_qemumips ?= "3.2%"
 PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.2%"
+PREFERRED_VERSION_libnl ?= "2.0"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${TARGET_ARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
