meta-digi-arm: include missing soc-family.inc
This is needed to use SOC_FAMILY data and was the reason why imx-lib was
not compiling correctly (see commit cec37f0).

Thus revert also commit cec37f0 because that workaround is not needed
anymore.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccxmx53js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx53js.conf
@@ -2,6 +2,7 @@
 #@NAME: ConnectCore for MX53 JumpStart Kit.
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore for MX53 JSK.
 
+include conf/machine/include/soc-family.inc
 include conf/machine/include/imx-digi-base.inc
 include conf/machine/include/tune-cortexa8.inc
 
