meta-digi: fix recipe dependences on libx11
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -105,3 +105,6 @@ BB_SIGNATURE_HANDLER ?= 'OEBasicHash'
 # with general agreement from the core team.
 #
 OELAYOUT_ABI = "8"
+
+# Mask openembedded core gst-ffmpeg recipe because it adds a dependency on libav (libgl, libx11)
+BBMASK = "meta-openembedded/meta-oe/recipes-multimedia/gstreamer/gst-ffmpeg_0.10.13.bbappend"
