meta-digi-arm: Add accel-video to machine configuration files.
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccxmx53js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx53js.conf
@@ -13,7 +13,7 @@ SOC_FAMILY = "mx5"
 
 UBOOT_MACHINE = "ccxmx53js_config"
 
-MACHINE_FEATURES += " wifi"
+MACHINE_FEATURES += " wifi accel-video"
 
 UBOOT_ENTRYPOINT_mx53  = "0x70800000"
 UBOOT_LOADADDRESS_mx53 = "0x70800000"
