--- a/meta-digi-arm/conf/machine/ccxmx51js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx51js.conf
@@ -13,7 +13,7 @@ SOC_FAMILY = "mx5"
 
 UBOOT_MACHINE = "ccxmx51_config"
 
-MACHINE_FEATURES += " wifi"
+MACHINE_FEATURES += " wifi accel-video"
 
 UBOOT_ENTRYPOINT_mx51  = "0x94000000"
 UBOOT_LOADADDRESS_mx51 = "0x94000000"
