meta-digi-arm: rework 'ccardxmx28js' machine configuration
* u-boot config
* serial console
* flash images

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardxmx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardxmx28js.conf
@@ -8,7 +8,7 @@ IMXBOOTLETS_MACHINE = "CCARDXMX28JS"
 
 UBOOT_ENTRYPOINT = "0x41008000"
 UBOOT_LOADADDRESS = "0x41008000"
-UBOOT_MACHINE = "ccardxmx28js_config"
+UBOOT_MACHINE = "ccardwmx28js_config"
 UBOOT_MAKE_TARGET = "u-boot.sb"
 UBOOT_SUFFIX = "sb"
 
@@ -17,10 +17,7 @@ KERNEL_IMAGETYPE = "uImage"
 # Digi's kernel does not use device tree.
 # KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/ccardxmx28js.dts"
 
-SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext3"
-IMAGE_FSTYPES ?= "tar.bz2 ext3 uboot.mxsboot-sdcard sdcard"
-
-SERIAL_CONSOLE = "115200 ttyAMA0"
+SERIAL_CONSOLE = "115200 ttyAM0"
 
 KERNEL_IMAGETYPE = "uImage"
 
