--- a/meta-digi-arm/conf/machine/ccardxmx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardxmx28js.conf
@@ -21,4 +21,4 @@ SERIAL_CONSOLE = "115200 ttyAM0"
 
 KERNEL_IMAGETYPE = "uImage"
 
-MACHINE_FEATURES = "apm usbgadget usbhost vfat alsa touchscreen"
+MACHINE_FEATURES = "apm usbgadget usbhost vfat alsa touchscreen bluetooth"
