meta-digi: fix typos
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -2,7 +2,7 @@ DISTRO = "del"
 DISTRO_NAME = "Digi Embedded Linux"
 DISTRO_VERSION = "6.0"
 SDK_VENDOR = "-del"
-SDK_VERSION := "${DISTRO_VERSION}" 
+SDK_VERSION := "${DISTRO_VERSION}"
 
 MAINTAINER = "Digi Support <support@digi.com>"
 
@@ -14,7 +14,7 @@ LOCALCONF_VERSION = "1"
 DISTRO_FEATURES = "alsa"
 DISTRO_FEATURES += "ext2"
 DISTRO_FEATURES += "usbgadget"
-DISTRO_FEATURES += "usbhst"
+DISTRO_FEATURES += "usbhost"
 DISTRO_FEATURES += "nfs"
 DISTRO_FEATURES += "${DISTRO_FEATURES_LIBC}"
 DISTRO_FEATURES += "largefile"
