meta-digi: update to Yocto 1.3 'Danny'
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccxmx51js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx51js.conf
@@ -2,11 +2,10 @@
 #@NAME: ConnectCore for MX51 JumpStart Kit.
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore for MX51 JSK
 
-include conf/machine/include/soc-family.inc
 include conf/machine/include/imx-digi-base.inc
 include conf/machine/include/tune-cortexa8.inc
 
-SOC_FAMILY = "mx5"
+SOC_FAMILY = "mx51:mx5"
 
 # Digi's kernel does not use device trees.
 # KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/ccxmx51js.dts"
