--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -9,6 +9,7 @@ MAINTAINER = "Digi Support <support@digi.com>"
 TARGET_VENDOR = "-del"
 
 LOCALCONF_VERSION = "1"
+LAYER_CONF_VERSION ?= "6"
 
 # Comment out features to leave them out
 DISTRO_FEATURES = "alsa"
@@ -22,12 +23,12 @@ DISTRO_FEATURES += "opengl"
 
 PREFERRED_PROVIDER_jpeg = "jpeg"
 
-PREFERRED_VERSION_linux-yocto ?= "3.0%"
-PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.2%"
-PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.2%"
-PREFERRED_VERSION_linux-yocto_qemuarm ?= "3.2%"
-PREFERRED_VERSION_linux-yocto_qemumips ?= "3.2%"
-PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.2%"
+PREFERRED_VERSION_linux-yocto ?= "3.4%"
+PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.4%"
+PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.4%"
+PREFERRED_VERSION_linux-yocto_qemuarm ?= "3.4%"
+PREFERRED_VERSION_linux-yocto_qemumips ?= "3.4%"
+PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.4%"
 PREFERRED_VERSION_libnl ?= "2.0"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${TARGET_ARCH}"
@@ -75,25 +76,33 @@ https://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n"
 # The CONNECTIVITY_CHECK_URI's are used to test whether we can succesfully
 # fetch from the network (and warn you if not). To disable the test set
 # the variable to be empty.
-CONNECTIVITY_CHECK_URIS ?= "git://git.yoctoproject.org/yocto-firewall-test;protocol=git;rev=HEAD \
-                          https://eula-downloads.yoctoproject.org/index.php \
-                          http://bugzilla.yoctoproject.org/report.cgi"
+# Git example url: git://git.yoctoproject.org/yocto-firewall-test;protocol=git;rev=HEAD
+
+CONNECTIVITY_CHECK_URIS ?= " \
+             https://eula-downloads.yoctoproject.org/index.php \
+             http://bugzilla.yoctoproject.org/report.cgi"
 
 SANITY_TESTED_DISTROS ?= " \
             Yocto (Built by Poky 7.0) 1.2 \n \
+            Yocto (Built by Poky 8.0) 1.3 \n \
+            Poky 7.0 (Yocto Project 1.2 Reference Distro) 1.2 \n \
+            Poky 8.0 (Yocto Project 1.3 Reference Distro) 1.3 \n \
             Ubuntu 10.04.4 LTS \n \
             Ubuntu 11.10 \n \
             Ubuntu 12.04 LTS \n \
             Ubuntu 12.04.1 LTS \n \
-            Fedora release 15 (Lovelock) \n \
+            Ubuntu 12.10 \n \
             Fedora release 16 (Verne) \n \
             Fedora release 17 (Beefy Miracle) \n \
+            Fedora release 18 (Spherical Cow) \n \
             CentOS release 5.6 (Final) \n \
             CentOS release 5.7 (Final) \n \
-            CentOS release 6.2 (Final) \n \
-            Debian GNU/Linux 6.0.4 (squeeze) \n \
+            CentOS release 5.8 (Final) \n \
+            CentOS release 6.3 (Final) \n \
+            Debian GNU/Linux 6.0.6 (squeeze) \n \
             openSUSE 11.4 \n \
             openSUSE 12.1 \n \
+            openSUSE 12.2 \n \
 	    "
 
 # Default hash policy for distro
@@ -105,6 +114,13 @@ BB_SIGNATURE_HANDLER ?= 'OEBasicHash'
 # with general agreement from the core team.
 #
 OELAYOUT_ABI = "8"
+
+# add poky sanity bbclass
+INHERIT += "poky-sanity"
+
+#WARN_QA = "unsafe-references-in-binaries unsafe-references-in-scripts"
+WARN_QA = ""
+ERROR_QA = "dev-so debug-deps dev-deps debug-files arch la2 pkgconfig la perms useless-rpaths rpaths staticdev ldflags"
 
 # Mask openembedded core gst-ffmpeg recipe because it adds a dependency on libav (libgl, libx11)
 BBMASK = "meta-openembedded/meta-oe/recipes-multimedia/gstreamer/gst-ffmpeg_0.10.13.bbappend"
