meta-digi-del: rename tasks to packagegroups
For Yocto 1.3 'Danny' migration.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -37,7 +37,7 @@ SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 EXTRAOPKGCONFIG = "poky-feed-config-opkg"
 
 # Override these in poky based distros to modify DISTRO_EXTRA_R*
-POKY_DEFAULT_EXTRA_RDEPENDS = "task-del-core"
+POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-del-core"
 POKY_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
 
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
