meta-digi-arm: add 'digi-arm' collection
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -5,6 +5,10 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
+BBFILE_COLLECTIONS += "digi-arm"
+BBFILE_PATTERN_digi-arm := "^${LAYERDIR}/"
+BBFILE_PRIORITY_digi-arm = "5"
+
 # This is the FSL license agreement.
 FSL_MMK_EULA_FILE = "${LAYERDIR}/FSL_MMK_EULA"
 
