meta-digi-arm: Add atheros wireless module.
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccardxmx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardxmx28js.conf
@@ -17,6 +17,8 @@ KERNEL_IMAGETYPE = "uImage"
 # Digi's kernel does not use device tree.
 # KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/ccardxmx28js.dts"
 
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-atheros"
+
 SERIAL_CONSOLE = "115200 ttyAM0"
 
 KERNEL_IMAGETYPE = "uImage"
