meta-digi-arm: Add wifi feature to ccardxmx28js machine.
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccardxmx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardxmx28js.conf
@@ -23,4 +23,4 @@ SERIAL_CONSOLE = "115200 ttyAM0"
 
 KERNEL_IMAGETYPE = "uImage"
 
-MACHINE_FEATURES = "apm usbgadget usbhost vfat alsa touchscreen bluetooth"
+MACHINE_FEATURES = "apm usbgadget usbhost vfat alsa touchscreen bluetooth wifi"
