meta-digi-arm: Add firmware-mxs.
This package contains firmware files for the MXS Digi family (Embedded and
boxed products).

Now it contains the bluetooth binary firmware files.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccardxmx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardxmx28js.conf
@@ -24,3 +24,5 @@ SERIAL_CONSOLE = "115200 ttyAM0"
 KERNEL_IMAGETYPE = "uImage"
 
 MACHINE_FEATURES = "apm usbgadget usbhost vfat alsa touchscreen bluetooth wifi"
+
+MACHINE_FIRMWARE += "firmware-mxs-ar3k"
