meta-digi-arm: Fix u-boot configuration target for ccxmx51js.
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccxmx51js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx51js.conf
@@ -10,7 +10,7 @@ SOC_FAMILY = "mx51:mx5"
 # Digi's kernel does not use device trees.
 # KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/ccxmx51js.dts"
 
-UBOOT_MACHINE = "ccxmx51_config"
+UBOOT_MACHINE = "ccxmx51js_config"
 
 MACHINE_FEATURES += " wifi accel-video"
 
