meta-digi-arm: Generate a bootstreamed u-boot for the ConnectCard for MX28.
The ConnectCard needs a bootstreamed (.sb) u-boot to boot from flash. This
is flashed using u-boot.

This changes compiles a bootstream u-boot image. The bootlets are compiled
separately and it's U-Boot's Makefile that calls elftosb to generate the
final bootstream.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccardxmx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardxmx28js.conf
@@ -4,13 +4,14 @@
 
 include conf/machine/include/mxs-digi-base.inc
 
-IMXBOOTLETS_MACHINE = "CCARDXMX28JS"
-
 UBOOT_ENTRYPOINT = "0x41008000"
 UBOOT_LOADADDRESS = "0x41008000"
-UBOOT_MACHINE = "ccardwmx28js_config"
-UBOOT_MAKE_TARGET = "u-boot.sb"
+UBOOT_MACHINE = "ccardxmx28js_config"
+UBOOT_MAKE_TARGET = "u-boot-ivt.sb"
 UBOOT_SUFFIX = "sb"
+UBOOT_IMAGE = "u-boot-${MACHINE}-ivt-${PV}-${PR}.${UBOOT_SUFFIX}"
+UBOOT_BINARY = "u-boot-ivt.${UBOOT_SUFFIX}"
+UBOOT_SYMLINK = "u-boot-${MACHINE}-ivt.${UBOOT_SUFFIX}"
 
 KERNEL_IMAGETYPE = "uImage"
 
