meta-digi-arm: Add support to compile u-boot variants.
U-Boot has a set of pre-defined make targets per platform that allow
to configure u-boot for different variants (128sdram,4Kpage,dbg etc.)

This change allows to use a UBOOT_CONFIG_VARIANT variable in your
local.conf file to choose which variant to build.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccardxmx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardxmx28js.conf
@@ -6,12 +6,15 @@ include conf/machine/include/mxs-digi-base.inc
 
 UBOOT_ENTRYPOINT = "0x41008000"
 UBOOT_LOADADDRESS = "0x41008000"
-UBOOT_MACHINE = "ccardxmx28js_config"
+
+# Set UBOOT_CONFIG_VARIANT in local.conf accordingly, default is empty: 261MHz,360MHz,test,dbg
+UBOOT_CONFIG_VARIANT ?= ""
+UBOOT_MACHINE = '${MACHINE}${@base_conditional( "UBOOT_CONFIG_VARIANT", "", "_", "_${UBOOT_CONFIG_VARIANT}_", d )}config'
 UBOOT_MAKE_TARGET = "u-boot-ivt.sb"
 UBOOT_SUFFIX = "sb"
-UBOOT_IMAGE = "u-boot-${MACHINE}-ivt-${PV}-${PR}.${UBOOT_SUFFIX}"
+UBOOT_IMAGE = 'u-boot-${MACHINE}${@base_conditional( "UBOOT_CONFIG_VARIANT", "", "-", "-${UBOOT_CONFIG_VARIANT}-", d )}ivt-${PV}-${PR}.${UBOOT_SUFFIX}'
 UBOOT_BINARY = "u-boot-ivt.${UBOOT_SUFFIX}"
-UBOOT_SYMLINK = "u-boot-${MACHINE}-ivt.${UBOOT_SUFFIX}"
+UBOOT_SYMLINK = 'u-boot-${MACHINE}${@base_conditional( "UBOOT_CONFIG_VARIANT", "", "-", "-${UBOOT_CONFIG_VARIANT}-", d )}ivt.${UBOOT_SUFFIX}'
 
 KERNEL_IMAGETYPE = "uImage"
 
