meta-digi-arm: Fix console settings for ccxmx51.
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccxmx51js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx51js.conf
@@ -15,4 +15,6 @@ MACHINE_FEATURES += " wifi accel-video"
 UBOOT_ENTRYPOINT_mx51  = "0x94000000"
 UBOOT_LOADADDRESS_mx51 = "0x94000000"
 
+SERIAL_CONSOLE = "38400 ttymxc1"
+
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-redpine"
