meta-digi-del: Replace wpa supplicant configuration files.
Use the ones in DEL instead.

Fixes https://jira.digi.com/browse/DEL-160

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-del/recipes-connectivity/wpa-supplicant/wpa-supplicant-1.0/wpa_supplicant.conf
+++ b/meta-digi-del/recipes-connectivity/wpa-supplicant/wpa-supplicant-1.0/wpa_supplicant.conf
@@ -4,7 +4,7 @@ fast_reauth=1
 update_config=1
 
 ## -- Example MANAGED network
-ap_scan=1	# MANAGED mode
+ap_scan=1	# for MANAGED mode
 network={
 	scan_ssid=1
 	ssid=""
@@ -12,22 +12,9 @@ network={
 }
 
 ## -- Example AD-HOC network
-# ap_scan=1	# AD-HOC mode (Atheros driver)
+# ap_scan=2	# mandatory for AD-HOC mode
 # network={
 # 	mode=1
-# 	frequency=2412
 # 	ssid="adhoc_network"
 # 	key_mgmt=NONE
-# }
-
-# -- SoftAP mode
-# ap_scan=2
-# network={
-# 	ssid="ath6kl-ap"
-# 	mode=2
-# 	frequency=2412
-# 	key_mgmt=WPA-PSK
-# 	proto=RSN
-# 	pairwise=CCMP
-# 	psk="12345678"
 # }
