meta-digi: remove 'pulseaudio' dependence from del-image-minimal
Dependence's origin is in 'gst-plugins-good'

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -21,6 +21,9 @@ DISTRO_FEATURES += "${DISTRO_FEATURES_LIBC}"
 DISTRO_FEATURES += "largefile"
 DISTRO_FEATURES += "opengl"
 
+# Disable pulseaudio (not needed in del-image-minimal)
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "pulseaudio"
+
 PREFERRED_PROVIDER_jpeg = "jpeg"
 
 PREFERRED_VERSION_linux-yocto ?= "3.4%"
