amd-gpu-bin-mx51: Use a python function to populate INSANE_SKIP
While on it, revert PROVIDES to its previous state, not depending on
DISTRO_FEATURES. This was tweaked to avoid a bitbake warning. Not it is
solved in a conditional BBMASK.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -125,4 +125,5 @@ WARN_QA = ""
 ERROR_QA = "dev-so debug-deps dev-deps debug-files arch la2 pkgconfig la perms useless-rpaths rpaths staticdev ldflags"
 
 # Mask openembedded core gst-ffmpeg recipe because it adds a dependency on libav (libgl, libx11)
-BBMASK = "meta-openembedded/meta-oe/recipes-multimedia/gstreamer/gst-ffmpeg_0.10.13.bbappend"
+BBMASK  = "meta-openembedded/meta-oe/recipes-multimedia/gstreamer/gst-ffmpeg_0.10.13.bbappend"
+BBMASK .= "${@base_contains('DISTRO_FEATURES', 'x11', '', '|.*amd-gpu-x11-bin-mx51_.*bb', d)}"
