--- a/meta-digi-arm/conf/machine/ccxmx53js.conf
+++ b/meta-digi-arm/conf/machine/ccxmx53js.conf
@@ -16,3 +16,4 @@ UBOOT_ENTRYPOINT_mx53  = "0x70800000"
 UBOOT_LOADADDRESS_mx53 = "0x70800000"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-redpine"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-gpio"
