--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -93,6 +93,7 @@ SANITY_TESTED_DISTROS ?= " \
             Ubuntu 11.10 \n \
             Ubuntu 12.04 LTS \n \
             Ubuntu 12.04.1 LTS \n \
+            Ubuntu 12.04.2 LTS \n \
             Ubuntu 12.10 \n \
             Fedora release 16 (Verne) \n \
             Fedora release 17 (Beefy Miracle) \n \
