meta-digi-arm: rework machine configuration files
So they don't depend on the machine files from meta-fs-arm layer.

This allows to override some settings in project's local.conf file.

https://jira.digi.com/browse/DEL-219 #resolve

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx51js.conf
+++ b/meta-digi-arm/conf/machine/ccimx51js.conf
@@ -3,18 +3,19 @@
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore for MX51 JSK
 
 include conf/machine/include/imx-digi-base.inc
-include conf/machine/include/tune-cortexa8.inc
 
 SOC_FAMILY = "mx51:mx5"
 
-# Digi's kernel does not use device trees.
-# KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/ccimx51js.dts"
+MACHINE_FEATURES += "accel-video wifi"
 
-MACHINE_FEATURES += " wifi accel-video"
-
-UBOOT_ENTRYPOINT_mx51  = "0x94000000"
-UBOOT_LOADADDRESS_mx51 = "0x94000000"
+UBOOT_ENTRYPOINT  = "0x94000000"
+UBOOT_LOADADDRESS = "0x94000000"
 
 SERIAL_CONSOLE = "38400 ttymxc1"
+
+# Firmware
+MACHINE_FIRMWARE = "firmware-imx-vpu-imx51 firmware-imx-sdma-imx51"
+
+MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-redpine"
