--- a/meta-digi-arm/conf/machine/ccimx53js.conf
+++ b/meta-digi-arm/conf/machine/ccimx53js.conf
@@ -3,16 +3,18 @@
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore for MX53 JSK.
 
 include conf/machine/include/imx-digi-base.inc
-include conf/machine/include/tune-cortexa8.inc
 
 SOC_FAMILY = "mx53:mx5"
 
-# Digi's kernel does not use device tree.
-# KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/imx53-qsb.dts"
+MACHINE_FEATURES += "accel-video wifi"
 
-MACHINE_FEATURES += " wifi accel-video"
+UBOOT_ENTRYPOINT  = "0x70800000"
+UBOOT_LOADADDRESS = "0x70800000"
 
-UBOOT_ENTRYPOINT_mx53  = "0x70800000"
-UBOOT_LOADADDRESS_mx53 = "0x70800000"
+SERIAL_CONSOLE = "115200 ttymxc0"
+
+# Firmware
+MACHINE_FIRMWARE = "firmware-imx-vpu-imx53 firmware-imx-sdma-imx53"
+MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-redpine"
