--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -4,7 +4,9 @@
 
 include conf/machine/include/mxs-digi-base.inc
 
-UBOOT_ENTRYPOINT = "0x41008000"
+SOC_FAMILY = "mxs"
+
+UBOOT_ENTRYPOINT  = "0x41008000"
 UBOOT_LOADADDRESS = "0x41008000"
 
 # Set UBOOT_CONFIG_VARIANT in local.conf accordingly, default is empty: 261MHz,360MHz,test,dbg
@@ -16,17 +18,13 @@ UBOOT_IMAGE = 'u-boot-${MACHINE}${@base_conditional( "UBOOT_CONFIG_VARIANT", "",
 UBOOT_BINARY = "u-boot-ivt.${UBOOT_SUFFIX}"
 UBOOT_SYMLINK = 'u-boot-${MACHINE}${@base_conditional( "UBOOT_CONFIG_VARIANT", "", "-", "-${UBOOT_CONFIG_VARIANT}-", d )}ivt.${UBOOT_SUFFIX}'
 
-KERNEL_IMAGETYPE = "uImage"
-
-# Digi's kernel does not use device tree.
-# KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/ccardimx28js.dts"
-
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-atheros"
-
 SERIAL_CONSOLE = "115200 ttyAM0"
 
-KERNEL_IMAGETYPE = "uImage"
+# wpa_supplicant driver to use in '/etc/network/interfaces'
+WPA_DRIVER = "nl80211"
 
-MACHINE_FEATURES = "apm usbgadget usbhost vfat alsa touchscreen bluetooth wifi"
+# Firmware
+MACHINE_FIRMWARE = "firmware-mxs-ar3k"
+MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
 
-MACHINE_FIRMWARE += "firmware-mxs-ar3k"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-atheros"
