meta-digi-arm: Add cpx2 machine.
This fixes https://jira.digi.com/browse/DEL-190

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/cpx2.conf
+++ b/meta-digi-arm/conf/machine/cpx2.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
-#@NAME: ConnectCore for MX28 JumpStart Kit.
-#@DESCRIPTION: Machine configuration for Digi's ConnectCore for MX28 JSK. 
+#@NAME: ConnectPort CPX2.
+#@DESCRIPTION: Machine configuration for Digi's ConnectPort CPX2. 
 
 include conf/machine/include/mxs-digi-base.inc
 
@@ -28,5 +28,3 @@ MACHINE_FIRMWARE = "firmware-mxs-ar3k"
 MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-atheros"
-
-MACHINE_FEATURES += "alsa touchscreen"
