meta-digi: Autoload kernel-module-mma7455l with del-examples-accelerometer.
For this the CCIMX51 and CCIMX53 kernels are configured to build the
mma7455l module and it is included as a dependency of the del-examples-
accelerometer application.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx53js.conf
+++ b/meta-digi-arm/conf/machine/ccimx53js.conf
@@ -16,5 +16,8 @@ SERIAL_CONSOLE = "115200 ttymxc0"
 # Firmware
 MACHINE_FIRMWARE = "firmware-imx-vpu-imx53 firmware-imx-sdma-imx53"
 MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
+MACHINE_EXTRA_RRECOMMENDS += "kernel-module-mma7455l \"
+
+module_autoload_mma7455l = "mma7455l"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-redpine"
