meta-digi: Automate the sahara kernel module loading.
The del-examples-sahara now depends on the kernel modules it needs to
work and these are autoloaded at boot.

Fixes DEL-274.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx51js.conf
+++ b/meta-digi-arm/conf/machine/ccimx51js.conf
@@ -18,7 +18,11 @@ MACHINE_FIRMWARE = "firmware-imx-vpu-imx51 firmware-imx-sdma-imx51"
 
 MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-mma7455l \"
+MACHINE_EXTRA_RRECOMMENDS += "kernel-module-scc2-driver \"
+MACHINE_EXTRA_RRECOMMENDS += "kernel-module-sahara \"
 
 module_autoload_mma7455l = "mma7455l"
+module_autoload_scc2_driver = "scc2_driver"
+module_autoload_sahara = "sahara"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-redpine"
