meta-digi: Add accel-graphics machine feature.
The del-image-minimal will included the graphical acceleration libraries
if the machine supports accel-graphics.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx53js.conf
+++ b/meta-digi-arm/conf/machine/ccimx53js.conf
@@ -6,7 +6,7 @@ include conf/machine/include/imx-digi-base.inc
 
 SOC_FAMILY = "mx53:mx5"
 
-MACHINE_FEATURES += "accel-video wifi"
+MACHINE_FEATURES += "accel-graphics accel-video wifi"
 
 UBOOT_ENTRYPOINT  = "0x70800000"
 UBOOT_LOADADDRESS = "0x70800000"
