--- a/meta-digi-arm/conf/machine/ccimx51js.conf
+++ b/meta-digi-arm/conf/machine/ccimx51js.conf
@@ -6,7 +6,7 @@ include conf/machine/include/imx-digi-base.inc
 
 SOC_FAMILY = "mx51:mx5"
 
-MACHINE_FEATURES += "accel-video wifi"
+MACHINE_FEATURES += "accel-graphics accel-video wifi"
 
 UBOOT_ENTRYPOINT  = "0x94000000"
 UBOOT_LOADADDRESS = "0x94000000"
