--- a/meta-digi-arm/recipes-kernel/kernel-module-redpine/files/Makefile
+++ b/meta-digi-arm/recipes-kernel/kernel-module-redpine/files/Makefile
@@ -31,6 +31,7 @@ rsi_master-y := $(MASTER_OBJS)
 
 SRC := $(shell pwd)
 
+SHELL     = /bin/bash
 FIRMWARE := $(addprefix $(SRC)/RS.GENR.LNX.SD_GPL/OSD/LINUX/release/, instructionSet tadm taim)
 
 all:
@@ -41,3 +42,17 @@ modules_install:
 	# Install firmware
 	mkdir -p $(INSTALL_MOD_PATH)/lib/firmware/redpine
 	install -m 0644 $(FIRMWARE) $(INSTALL_MOD_PATH)/lib/firmware/redpine/
+
+tarball: TAR_DIR = $(SRC)/_tarball
+tarball:
+	mkdir -p $(TAR_DIR)/{firmware,GPL/{HAL/SDIO/LINUX/master,OSD/LINUX/master},NON_GPL}
+	install -m 0644 $(MASTER_OBJS:.o=.c) $(TAR_DIR)/GPL/OSD/LINUX/master/
+	mv $(TAR_DIR)/GPL/OSD/LINUX/master/ganges_linux_sdio.c $(TAR_DIR)/GPL/HAL/SDIO/LINUX/master/
+	cp -r RS.GENR.LNX.SD_GPL/include $(TAR_DIR)/GPL/
+	for i in $(CLIENT_OBJS); do \
+		install -m 0644 $${i} $(TAR_DIR)/NON_GPL/$$(basename $${i})_shipped; \
+	done
+	install -m 0644 $(FIRMWARE) $(TAR_DIR)/firmware/
+	rm -f redpine-$(DEL_PLATFORM).tar.gz && tar cz --transform 's,\(^[^/]\+/\),\1$(DEL_PLATFORM)/,' \
+		--numeric-owner --owner 0 --group 0 -f redpine-$(DEL_PLATFORM).tar.gz -C $(TAR_DIR) .
+	-rm -rf $(TAR_DIR)
