--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -60,7 +60,13 @@ QEMU_TARGETS ?= "arm i386 mips mipsel ppc x86_64"
 # Some packages like gst-plugins-ugly need this
 LICENSE_FLAGS_WHITELIST += "commercial"
 
+DIGI_MIRROR = "http://build-linux.digi.com/yocto/downloads"
+
 PREMIRRORS ?= "\
+git://.*/.*   ${DIGI_MIRROR} \n \
+ftp://.*/.*      ${DIGI_MIRROR} \n \
+http://.*/.*     ${DIGI_MIRROR} \n \
+https://.*/.*    ${DIGI_MIRROR} \n \
 bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 git://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
