meta-digi-dbl: Add dbl layer.
The meta-digi-dbl layer defines its own dbl distribution to run on Digi's
boxed products.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-dbl/conf/distro/dbl.conf
+++ b/meta-digi-dbl/conf/distro/dbl.conf
@@ -1,12 +1,12 @@
-DISTRO = "del"
-DISTRO_NAME = "Digi Embedded Linux"
-DISTRO_VERSION = "6.0"
-SDK_VENDOR = "-del"
+DISTRO = "dbl"
+DISTRO_NAME = "Digi Boxed Linux"
+DISTRO_VERSION = "0.1"
+SDK_VENDOR = "-dbl"
 SDK_VERSION := "${DISTRO_VERSION}"
 
 MAINTAINER = "Digi Support <support@digi.com>"
 
-TARGET_VENDOR = "-del"
+TARGET_VENDOR = "-dbl"
 
 LOCALCONF_VERSION = "1"
 LAYER_CONF_VERSION ?= "6"
@@ -19,12 +19,9 @@ DISTRO_FEATURES += "usbhost"
 DISTRO_FEATURES += "nfs"
 DISTRO_FEATURES += "${DISTRO_FEATURES_LIBC}"
 DISTRO_FEATURES += "largefile"
-DISTRO_FEATURES += "opengl"
 
-# Disable pulseaudio (not needed in del-image-minimal)
+# Disable pulseaudio (not needed in dbl-image-base)
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "pulseaudio"
-
-PREFERRED_PROVIDER_jpeg = "jpeg"
 
 PREFERRED_VERSION_linux-yocto ?= "3.4%"
 PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.4%"
@@ -39,7 +36,7 @@ SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 EXTRAOPKGCONFIG = "poky-feed-config-opkg"
 
 # Override these in poky based distros to modify DISTRO_EXTRA_R*
-POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-del-core"
+POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dbl-core"
 POKY_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
 
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
@@ -57,7 +54,7 @@ TCLIBCAPPEND = ""
 QEMU_TARGETS ?= "arm i386 mips mipsel ppc x86_64"
 # Other QEMU_TARGETS "mips64 mips64el sh4"
 
-# Some packages like gst-plugins-ugly need this
+# Some packages need this
 LICENSE_FLAGS_WHITELIST += "commercial"
 
 DIGI_MIRROR = "http://build-linux.digi.com/yocto/downloads"
@@ -130,7 +127,3 @@ INHERIT += "poky-sanity"
 #WARN_QA = "unsafe-references-in-binaries unsafe-references-in-scripts"
 WARN_QA = ""
 ERROR_QA = "dev-so debug-deps dev-deps debug-files arch la2 pkgconfig la perms useless-rpaths rpaths staticdev ldflags"
-
-# Mask openembedded core gst-ffmpeg recipe because it adds a dependency on libav (libgl, libx11)
-BBMASK  = "meta-openembedded/meta-oe/recipes-multimedia/gstreamer/gst-ffmpeg_0.10.13.bbappend"
-BBMASK .= "${@base_contains('DISTRO_FEATURES', 'x11', '', '|.*amd-gpu-x11-bin-mx51_.*bb', d)}"
