meta-digi: Add BBMASK for unused linux-imx.
This avoids a harmless warning that appears when bitbake parses all
recipes.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-dbl/conf/distro/dbl.conf
+++ b/meta-digi-dbl/conf/distro/dbl.conf
@@ -127,3 +127,5 @@ INHERIT += "poky-sanity"
 #WARN_QA = "unsafe-references-in-binaries unsafe-references-in-scripts"
 WARN_QA = ""
 ERROR_QA = "dev-so debug-deps dev-deps debug-files arch la2 pkgconfig la perms useless-rpaths rpaths staticdev ldflags"
+
+BBMASK = "meta-fsl-arm/recipes-kernel/linux/linux-imx_2.6.35.3.bb"
