--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -134,3 +134,4 @@ ERROR_QA = "dev-so debug-deps dev-deps debug-files arch la2 pkgconfig la perms u
 # Mask openembedded core gst-ffmpeg recipe because it adds a dependency on libav (libgl, libx11)
 BBMASK  = "meta-openembedded/meta-oe/recipes-multimedia/gstreamer/gst-ffmpeg_0.10.13.bbappend"
 BBMASK .= "${@base_contains('DISTRO_FEATURES', 'x11', '', '|.*amd-gpu-x11-bin-mx51_.*bb', d)}"
+BBMASK .= "|meta-fsl-arm/recipes-kernel/linux/linux-imx_2.6.35.3.bb"
