meta-digi-dbl: Add jpeg preferred provider.
This avoids the following recipe parsing warning:

NOTE: multiple providers are available for jpeg (jpeg, libjpeg-turbo)
NOTE: consider defining a PREFERRED_PROVIDER entry to match jpeg

Closes https://jira.digi.com/browse/DEL-336

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-dbl/conf/distro/dbl.conf
+++ b/meta-digi-dbl/conf/distro/dbl.conf
@@ -23,6 +23,8 @@ DISTRO_FEATURES += "largefile"
 # Disable pulseaudio (not needed in dbl-image-base)
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "pulseaudio"
 
+PREFERRED_PROVIDER_jpeg = "jpeg"
+
 PREFERRED_VERSION_linux-yocto ?= "3.4%"
 PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.4%"
 PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.4%"
