--- a/meta-digi-arm/conf/machine/cpx2.conf
+++ b/meta-digi-arm/conf/machine/cpx2.conf
@@ -27,4 +27,4 @@ WPA_DRIVER = "nl80211"
 MACHINE_FIRMWARE = "firmware-mxs-ar3k"
 MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-atheros"
+#MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-atheros"
