meta-digi-1.0.0.1: Change SRCREVS to release sha1s.
This commit is to be reverted next.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-dbl/conf/distro/dbl.conf
+++ b/meta-digi-dbl/conf/distro/dbl.conf
@@ -59,7 +59,7 @@ QEMU_TARGETS ?= "arm i386 mips mipsel ppc x86_64"
 # Some packages need this
 LICENSE_FLAGS_WHITELIST += "commercial"
 
-DIGI_MIRROR = "http://build-linux.digi.com/yocto/downloads"
+DIGI_MIRROR = "http://build-linux.digi.com/yocto/release"
 
 PREMIRRORS ?= "\
 git://.*/.*   ${DIGI_MIRROR} \n \
