--- a/meta-digi-arm/conf/machine/ccimx53js.conf
+++ b/meta-digi-arm/conf/machine/ccimx53js.conf
@@ -2,28 +2,7 @@
 #@NAME: ConnectCore for MX53 JumpStart Kit.
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore for MX53 JSK.
 
-include conf/machine/include/imx-digi-base.inc
-
-SOC_FAMILY = "mx53:mx5"
-
-MACHINE_FEATURES += "accel-graphics accel-video wifi"
-
-UBOOT_ENTRYPOINT  = "0x70800000"
-UBOOT_LOADADDRESS = "0x70800000"
+# Contains the ConnectCore for MX53 module.
+include conf/machine/include/ccimx53.inc
 
 SERIAL_CONSOLE = "115200 ttymxc0"
-
-# Firmware
-MACHINE_FIRMWARE = "firmware-imx-vpu-imx53 firmware-imx-sdma-imx53"
-MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
-MACHINE_EXTRA_RRECOMMENDS += "kernel-module-mma7455l \"
-MACHINE_EXTRA_RRECOMMENDS += "kernel-module-scc2-driver \"
-MACHINE_EXTRA_RRECOMMENDS += "kernel-module-sahara \"
-MACHINE_EXTRA_RRECOMMENDS += "kernel-module-mt9v111-camera \"
-MACHINE_EXTRA_RRECOMMENDS += "kernel-module-redpine \"
-
-module_autoload_mma7455l = "mma7455l"
-module_autoload_scc2_driver = "scc2_driver"
-module_autoload_sahara = "sahara"
-module_autoload_mt9v111_camera = "mt9v111_camera"
-
