distro: Extend the distro features to cover all machine features.
According to the poky reference manual, if a machine feature is not
included in the distro features it will not be supported.

Not convinced that works that way, but just in case I am adding all the
machine features to distro features. It shouldn't hurt.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -20,6 +20,11 @@ DISTRO_FEATURES += "nfs"
 DISTRO_FEATURES += "${DISTRO_FEATURES_LIBC}"
 DISTRO_FEATURES += "largefile"
 DISTRO_FEATURES += "opengl"
+DISTRO_FEATURES += "wifi"
+DISTRO_FEATURES += "accel-video"
+DISTRO_FEATURES += "accel-graphics"
+DISTRO_FEATURES += "accelerometer"
+DISTRO_FEATURES += "ext-eth"
 
 # Disable pulseaudio (not needed in del-image-minimal)
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "pulseaudio"
