--- a/meta-digi-dbl/conf/distro/dbl.conf
+++ b/meta-digi-dbl/conf/distro/dbl.conf
@@ -19,6 +19,7 @@ DISTRO_FEATURES += "usbhost"
 DISTRO_FEATURES += "nfs"
 DISTRO_FEATURES += "${DISTRO_FEATURES_LIBC}"
 DISTRO_FEATURES += "largefile"
+DISTRO_FEATURES += "wifi"
 
 # Disable pulseaudio (not needed in dbl-image-base)
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "pulseaudio"
