--- a/meta-digi-arm/conf/machine/ccimx51js.conf
+++ b/meta-digi-arm/conf/machine/ccimx51js.conf
@@ -22,6 +22,7 @@ MACHINE_EXTRA_RRECOMMENDS += "kernel-module-scc2-driver \"
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-sahara \"
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-mt9v111-camera \"
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-pmic-battery \"
+MACHINE_EXTRA_RRECOMMENDS += "kernel-module-redpine \"
 
 module_autoload_mma7455l = "mma7455l"
 module_autoload_scc2_driver = "scc2_driver"
@@ -29,4 +30,3 @@ module_autoload_sahara = "sahara"
 module_autoload_mt9v111_camera = "mt9v111_camera"
 module_autoload_pmic_battery = "pmic_battery"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-redpine"
