--- a/meta-digi-arm/conf/machine/ccimx53js.conf
+++ b/meta-digi-arm/conf/machine/ccimx53js.conf
@@ -20,10 +20,10 @@ MACHINE_EXTRA_RRECOMMENDS += "kernel-module-mma7455l \"
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-scc2-driver \"
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-sahara \"
 MACHINE_EXTRA_RRECOMMENDS += "kernel-module-mt9v111-camera \"
+MACHINE_EXTRA_RRECOMMENDS += "kernel-module-redpine \"
 
 module_autoload_mma7455l = "mma7455l"
 module_autoload_scc2_driver = "scc2_driver"
 module_autoload_sahara = "sahara"
 module_autoload_mt9v111_camera = "mt9v111_camera"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-redpine"
