--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -44,6 +44,7 @@ EXTRAOPKGCONFIG = "poky-feed-config-opkg"
 
 # Override these in poky based distros to modify DISTRO_EXTRA_R*
 POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-del-core"
+POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
 DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
