config templates: set default platform variants
https://jira.digi.com/browse/DEL-438

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/sdk/config/ccardimx28js/local.conf.sample
+++ b/sdk/config/ccardimx28js/local.conf.sample
@@ -48,7 +48,10 @@
 #MACHINE ?= "routerstationpro"
 #
 # This sets the default machine to be qemux86 if no other machine is selected:
-MACHINE ??= "ccardimx28js"
+#MACHINE ??= "qemux86"
+
+MACHINE = "ccardimx28js"
+MACHINE_VARIANT = "wb"
 
 #
 # Where to place downloads
