--- a/sdk/config/ccimx51js/local.conf.sample
+++ b/sdk/config/ccimx51js/local.conf.sample
@@ -48,7 +48,10 @@
 #MACHINE ?= "routerstationpro"
 #
 # This sets the default machine to be qemux86 if no other machine is selected:
-MACHINE ??= "ccimx51js"
+#MACHINE ??= "qemux86"
+
+MACHINE = "ccimx51js"
+MACHINE_VARIANT = "wagv"
 
 #
 # Where to place downloads
