meta-digi: Add meta-fsl-demos to sdk.
https://jira.digi.com/browse/DEL-452

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/sdk/config/ccardimx28js/bblayers.conf.sample
+++ b/sdk/config/ccardimx28js/bblayers.conf.sample
@@ -11,6 +11,7 @@ BBLAYERS ?= " \
   ##COREBASE##/meta-yocto-bsp \
   ##DIGIBASE##/meta-openembedded/meta-oe \
   ##DIGIBASE##/meta-fsl-arm \
+  ##DIGIBASE##/meta-fsl-demos \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
   ##DIGIBASE##/meta-digi/meta-digi-del \
   "
