--- a/meta-digi-arm/conf/machine/cpx2.conf
+++ b/meta-digi-arm/conf/machine/cpx2.conf
@@ -27,3 +27,4 @@ WPA_DRIVER = "nl80211"
 MACHINE_FIRMWARE = "firmware-mxs-ar3k"
 MACHINE_EXTRA_RRECOMMENDS += "${MACHINE_FIRMWARE}"
 
+# MACHINE_FEATURES_append = " wifi"
