--- a/sdk/config/wr21/local.conf.sample
+++ b/sdk/config/wr21/local.conf.sample
@@ -48,7 +48,10 @@
 #MACHINE ?= "routerstationpro"
 #
 # This sets the default machine to be qemux86 if no other machine is selected:
-MACHINE ??= "wr21"
+#MACHINE ??= "qemux86"
+
+MACHINE = "wr21"
+MACHINE_VARIANT = ""
 
 #
 # Where to place downloads
