--- a/meta-digi-del/conf/distro/del.conf
+++ b/meta-digi-del/conf/distro/del.conf
@@ -1,7 +1,8 @@
 DISTRO = "del"
+SDK_DISTRO="poky"
 DISTRO_NAME = "Digi Embedded Linux"
-DISTRO_VERSION = "1.0.0"
-SDK_VENDOR = "-del"
+DISTRO_VERSION = "1.3.2"
+SDK_VENDOR = "-pokysdk"
 SDK_VERSION := "${DISTRO_VERSION}"
 
 MAINTAINER = "Digi Support <support@digi.com>"
@@ -38,7 +39,7 @@ PREFERRED_VERSION_linux-yocto_qemumips ?= "3.4%"
 PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.4%"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${TARGET_ARCH}"
-SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
+SDKPATH = "/opt/${SDK_DISTRO}/${SDK_VERSION}"
 
 EXTRAOPKGCONFIG = "poky-feed-config-opkg"
 
