meta-digi: move Digi mirrors below yoctoproject's
So yoctoproject's are used *before* Digi's.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dbl/conf/distro/dbl.conf
+++ b/meta-digi-dbl/conf/distro/dbl.conf
@@ -70,13 +70,14 @@ svk://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n"
 
 MIRRORS =+ "\
-git://.*/.*      ${DIGI_MIRROR} \n \
-ftp://.*/.*      ${DIGI_MIRROR} \n \
-http://.*/.*     ${DIGI_MIRROR} \n \
-https://.*/.*    ${DIGI_MIRROR} \n \
 ftp://.*/.*      http://downloads.yoctoproject.org/mirror/sources/ \n \
 http://.*/.*     http://downloads.yoctoproject.org/mirror/sources/ \n \
 https://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n"
+
+MIRRORS += "\
+ftp://.*/.*      ${DIGI_MIRROR}/ \n \
+http://.*/.*     ${DIGI_MIRROR}/ \n \
+https://.*/.*    ${DIGI_MIRROR}/ \n"
 
 # The CONNECTIVITY_CHECK_URI's are used to test whether we can succesfully
 # fetch from the network (and warn you if not). To disable the test set
